<resources>
    <string name="app_name">Amar Shohor</string>
    <string name="title_activity_maps">Amar Shohor</string>
    <!--Registration and login-->
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="Fullname">fullname</string>
    <string name="Email">email</string>
    <string name="SignUp">Sign Up</string>
    <string name="Login">Login</string>
    <string name="exit">Cancel</string>

    <!--Drawer-->

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <!-- Nav Drawer Menu Items -->
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >History</item>
        <item >About</item>
        <item >Log out</item>

    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_logout</item>

    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="splash_screen"></string>


</resources>