<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/et_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Fullname"
        android:singleLine="true"
        android:drawableLeft="@drawable/fname"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Username"
        android:singleLine="true"
        android:drawableLeft="@drawable/name"
        android:drawablePadding="10dp" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp" />

        <EditText
        android:id="@+id/et_Password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp" />


    <Button
        android:id="@+id/bt_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_custom_click_orange"
        android:padding="15dp"
        android:text="@string/SignUp"
        android:onClick="signup"
        android:textColor="#fff" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bt_custom_click_orange"
        android:padding="15dp"
        android:text="@string/exit"
        android:textColor="#fff"/>

</LinearLayout>