<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<EditText
        android:id="@+id/et_loginusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Username"
        android:singleLine="true"
        android:drawableLeft="@drawable/name"
        android:drawablePadding="10dp" />
    <EditText
        android:id="@+id/et_loginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp" />



    <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_custom_click_orange"
            android:padding="15dp"
            android:text="@string/Login"
            android:textColor="#fff"
        android:onClick="invokeLogin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="can't Login?"
                android:id="@+id/txt1"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sign up here!"
                android:id="@+id/registration"
                android:padding="8dp"/>

        </LinearLayout>
    </LinearLayout>

